--- a/question1.html
+++ b/question1.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Question 1</title>
-<link rel="stylesheet" type="text/css" href="/style/question1.css">
+<link rel="stylesheet" type="text/css" href="style/question1.css">
 
 </head>
 
@@ -18,6 +18,6 @@
 			<button type="submit">Submit</button>
 		</div>
 	</form>
-	<script src="/js/question1.js"></script>
+	<script src="js/question1.js"></script>
 </body>
 </html>
